gcc/testsuite/rust/rustc/ui/error-codes/E0308-4.rs
fn main() {
    let x = 1u8;
    match x {
        0u8..=3i8 => (), // { dg-error ".E0308." "" { target *-*-* } }
        _ => ()
    }
}

